// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HelloWorld > HelloWorld component renders correctly 1`] = `
<div
  className="bg-green-500 text-2xl"
>
  Hello, 
  World
  !
</div>
`;

exports[`HelloWorld > The greetee prop works 1`] = `
<div
  className="bg-green-500 text-2xl"
>
  Hello, 
  Universe
  !
</div>
`;
